@@ -2,6 +2,7 @@
 ----------
 - added an InfoBox for Family
 - lots of improvements all the infoboxes
+- context menu for locations
 
 2006.06.30
 ----------
